<resources>
    <string name="app_name">WellnessApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_google">Login With Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hint_first_name">Ingresa tu nombre</string>
    <string name="hint_last_name">Ingresa tus apellidos</string>
    <string name="hint_email">Ingresa tu email</string>
    <string name="hint_password">Ingresa tu clave</string>
    <string name="or">OR</string>
    <string name="new_in_app">New on wellness app?</string>
    <string name="date">Date</string>
    <string name="cellphone">Cellphone</string>
    <string name="see_detail">See Detail</string>
    <string name="calculate">Calculate</string>
    <string name="personList">Person List</string>
    <string name="search">Search</string>
    <string name="view_data">View Data</string>
</resources>