<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personItemLayoutRecycler"
    android:layout_width="fill_parent"
    android:layout_height="180dp"
    android:padding="6dip"
    android:background="@color/white">

    <ImageView
        android:id="@+id/personImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/personData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/personImageView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/age"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/height"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/weight"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/see_detail"
            android:textColor="@color/purple_500" />

    </LinearLayout>



</RelativeLayout>