<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal"
        android:background="@color/green_700"
        >
        <ImageView
            android:id="@+id/wellnessAppIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_account_circle_white_48dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/personData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/green_700">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/firstName"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lastName"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cellphoneTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/cellphone"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="4">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

</LinearLayout>