<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/green_700">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingStart="8dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:id="@+id/wellnessAppIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_arm_flex_outline_white_36dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toEndOf="@id/wellnessAppIcon"
            android:padding="5dp"
            android:gravity="clip_vertical"
            android:layout_marginTop="12dp"
            android:text="Wellness App"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textSize="24sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/lblFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:text="@string/firstName"
        android:labelFor="@+id/firstName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/edit_text_padding"
        android:maxLines="1"
        android:inputType="text"
        android:height="48dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/lblLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:labelFor="@+id/lastName"
        android:text="@string/lastName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:inputType="text"
        android:height="48dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/lblGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hombre"
            android:textColor="@color/white"
            android:padding="6dp"
            android:onClick="onRadioButtonGenreClicked"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mujer"
            android:textColor="@color/white"
            android:padding="6dp"
            android:layout_marginStart="5dp"
            android:onClick="onRadioButtonGenreClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lblAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingresa tu edad en años"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:height="48dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:inputType="number"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingresa tu estatura en metros"
        android:layout_marginTop="10dp"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="12dp"
        android:height="48dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingresa tu peso kilogramos"
        android:layout_marginTop="10dp"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="12dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/white"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/resultImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Segunda Actividad"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/resultMb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Segunda Actividad"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>