<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingStart="8dp"
        android:orientation="horizontal"
        android:background="@color/green_700"
        >
        <ImageView
            android:id="@+id/wellnessAppIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_arm_flex_outline_white_36dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:text="Wellness App"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="24dp"
            android:text="@string/view_data"
            android:textColor="@color/green_500"
            android:textSize="36dp"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/email"
            android:labelFor="@+id/email"
            android:textColor="@color/green_light"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:textSize="14dp"
            android:textColor="@color/green_light"
            android:textColorHint="@color/green_light"
            android:translationY="10dp"
            android:paddingStart="4dp"
            android:padding="@dimen/edit_text_padding"
            android:maxLines="1"
            android:inputType="text"
            android:height="48dp"
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginHorizontal="@dimen/standard_padding"
            android:backgroundTint="@color/green_light"
            android:fontFamily="@font/roboto_light"
            android:drawableLeft="@drawable/ic_at_grey600_18dp"
            android:drawablePadding="6dp"/>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green_700"
            android:textColor="@color/white"
            android:text="@string/search"
            android:fontFamily="@font/roboto" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:text="TextView" />

    </LinearLayout>
</LinearLayout>